WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306006
[JSC] We should consider inlining function even if it is not called if it is small enough
https://bugs.webkit.org/show_bug.cgi?id=306006
Summary
[JSC] We should consider inlining function even if it is not called if it is ...
Yusuke Suzuki
Reported
2026-01-21 21:50:46 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-21 21:50:54 PST
<
rdar://problem/168644396
>
Yusuke Suzuki
Comment 2
2026-01-21 21:52:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57030
EWS
Comment 3
2026-01-21 23:57:31 PST
Committed
306000@main
(3fcbe08810d1): <
https://commits.webkit.org/306000@main
> Reviewed commits have been landed. Closing PR #57030 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug