[JSC] We should consider inlining function even if it is not called if it is small enough https://bugs.webkit.org/show_bug.cgi?id=306006 rdar://168644396

Reviewed by Mark Lam.

If a function is small enough, then even inlining will reduce the code
size because call sequence is having many instructions. And even it is
better for OMG since OMG can understand all side effects happening from
this call. This patch removes isCalled check for inlining. We should
decide from the call count etc. information. We also fix wasm size computation.
Adding 1 is not right.

* Source/JavaScriptCore/wasm/WasmInliningDecision.cpp:
(JSC::Wasm::InliningNode::inlineNode):
* Source/JavaScriptCore/wasm/WasmModuleInformation.h:

Canonical link: https://commits.webkit.org/306000@main